k8s/v1.30.5/manifests/argo-cd/abc/argo-cd/templates/argocd-server/ingress.yaml
---
# Source: argo-cd/templates/argocd-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-argocd-server
  namespace: default
  labels:
    helm.sh/chart: argo-cd-7.6.7
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v2.12.4"
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.maifuj.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-argocd-server
                port:
                  number: 443
  tls:
    - hosts:
      - argocd.maifuj.com
      secretName: argocd-server-tls
